# business-rank

./: .gitignore  ANALYSIS_SUMMARY.md  business.ipynb  fetch_businesses.py  pyproject.toml
data/: businesses_cache.json  data.json  example.json
results/: analysis_summary.json  business_opportunities_ranked.csv  business_opportunities_ranked.json
