[project]
name = "business-acquisition-scorer"
version = "1.0.0"
description = "Business acquisition opportunity scoring and analysis algorithm"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "nbformat>=5.10.4",
    "ipykernel>=6.31.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
